# openxd

./: .gitignore  COMPETITIVE_GAP_ANALYSIS.md  DESIGN-MODES.md  FEATURES.md  INTELLIGENCE.md  MEMORY_DESIGN.md  PINCHTAB_OBSERVATIONS_GUIDE.md  PLAN-PHASE2.md  PLAN.md  README.md  README.zh.md  README.zht.md  REFACTORING_OPPORTUNITIES.md  RELEASE.md  SKILLS-CATALOG.md  SKILL_AUDIT_ACTIVE_BASELINE.md  SKILL_COMPACT_AUTHORING_RULES.md  index.html  install  install-skills.sh  install.sh  package.json  sst-env.d.ts
.opencode/skills-backup/clawsec/: AGENTS.md  App.tsx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  constants.ts  eslint.config.js  index.html  metadata.json  package-lock.json  pyproject.toml  types.ts  vite-env.d.ts
.opencode/skills-backup/clawsec/advisories/: feed.json
.opencode/skills-backup/clawsec/components/: AdvisoryCard.tsx  CodeBlock.tsx  Footer.tsx  Header.tsx  Layout.tsx  LobsterBackground.tsx  SkillCard.tsx
.opencode/skills-backup/clawsec/font/: README.md
.opencode/skills-backup/clawsec/pages/: AdvisoryDetail.tsx  Checksums.tsx  FeedSetup.tsx  Home.tsx  ProductDemo.tsx  SkillDetail.tsx  SkillsCatalog.tsx  WikiBrowser.tsx
.opencode/skills-backup/clawsec/scripts/: backfill-exploitability.sh  feed-utils.sh  generate-wiki-llms.mjs  populate-local-feed.sh  populate-local-skills.sh  populate-local-wiki.sh  prepare-to-push.sh  release-skill.sh  validate-release-links.sh
.opencode/skills-backup/clawsec/utils/: analyze_exploitability.py  markdownComponents.tsx  markdownHelpers.mjs  package_skill.py  validate_skill.py  (+1 more)
(+381 files in other folders)
