[project]
name = "clawsec-utils"
version = "0.1.0"
description = "ClawSec skill utilities"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "S",   # bandit (security)
  "B",   # bugbear
  "C4",  # comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "S101",  # Allow assert statements
  "S603",  # Allow subprocess without shell=True check (we control inputs)
  "S607",  # Allow partial executable paths
]

[tool.ruff.lint.per-file-ignores]
"utils/__pycache__/*" = ["ALL"]

[tool.bandit]
exclude_dirs = ["__pycache__", ".venv"]
skips = ["B101"]  # Allow assert
